[package]
name = "dojo_bevy_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bevy = "0.16.0"
starknet = "0.13"
url = "2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
torii-grpc-client = { git = "https://github.com/dojoengine/torii", rev = "ee8756a" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
reqwest = { version = "0.11.27", features = [ "json", "rustls-tls" ], default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
