[package]
name = "dojo_bevy_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_log",
  "bevy_state",
  "serialize",
  "bevy_asset",
  "multi_threaded",
  "sysinfo_plugin",
] }
starknet = "0.16"
url = "2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
torii-grpc-client = { git = "https://github.com/dojoengine/torii", rev = "ee8756a" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
reqwest = { version = "0.11.27", features = [ "json", "rustls-tls" ], default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_window",
    "x11",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "bevy_gltf",
    "bevy_color",
    "tonemapping_luts",
    "bevy_scene",
    "bevy_ui",
    "bevy_text",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
